# svm-comp0120

./: LICENSE  README.md  pyproject.toml  svm.py  svm_util.py
experiments/: svc_test_rbf.py
